; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/nodes/extr_outfuncs.c__outCreateStmtInfo.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/nodes/extr_outfuncs.c__outCreateStmtInfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@relation = common dso_local global i32 0, align 4
@tableElts = common dso_local global i32 0, align 4
@inhRelations = common dso_local global i32 0, align 4
@partspec = common dso_local global i32 0, align 4
@partbound = common dso_local global i32 0, align 4
@ofTypename = common dso_local global i32 0, align 4
@constraints = common dso_local global i32 0, align 4
@options = common dso_local global i32 0, align 4
@oncommit = common dso_local global i32 0, align 4
@OnCommitAction = common dso_local global i32 0, align 4
@tablespacename = common dso_local global i32 0, align 4
@accessMethod = common dso_local global i32 0, align 4
@if_not_exists = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32*)* @_outCreateStmtInfo to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @_outCreateStmtInfo(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %5 = load i32, i32* @relation, align 4
  %6 = call i32 @WRITE_NODE_FIELD(i32 %5)
  %7 = load i32, i32* @tableElts, align 4
  %8 = call i32 @WRITE_NODE_FIELD(i32 %7)
  %9 = load i32, i32* @inhRelations, align 4
  %10 = call i32 @WRITE_NODE_FIELD(i32 %9)
  %11 = load i32, i32* @partspec, align 4
  %12 = call i32 @WRITE_NODE_FIELD(i32 %11)
  %13 = load i32, i32* @partbound, align 4
  %14 = call i32 @WRITE_NODE_FIELD(i32 %13)
  %15 = load i32, i32* @ofTypename, align 4
  %16 = call i32 @WRITE_NODE_FIELD(i32 %15)
  %17 = load i32, i32* @constraints, align 4
  %18 = call i32 @WRITE_NODE_FIELD(i32 %17)
  %19 = load i32, i32* @options, align 4
  %20 = call i32 @WRITE_NODE_FIELD(i32 %19)
  %21 = load i32, i32* @oncommit, align 4
  %22 = load i32, i32* @OnCommitAction, align 4
  %23 = call i32 @WRITE_ENUM_FIELD(i32 %21, i32 %22)
  %24 = load i32, i32* @tablespacename, align 4
  %25 = call i32 @WRITE_STRING_FIELD(i32 %24)
  %26 = load i32, i32* @accessMethod, align 4
  %27 = call i32 @WRITE_STRING_FIELD(i32 %26)
  %28 = load i32, i32* @if_not_exists, align 4
  %29 = call i32 @WRITE_BOOL_FIELD(i32 %28)
  ret void
}

declare dso_local i32 @WRITE_NODE_FIELD(i32) #1

declare dso_local i32 @WRITE_ENUM_FIELD(i32, i32) #1

declare dso_local i32 @WRITE_STRING_FIELD(i32) #1

declare dso_local i32 @WRITE_BOOL_FIELD(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
